# Syndesi

./: .gitignore  Notes.md  README.md
doc/: .gitignore  Frame.json  documentation.md
doc/communication/: Frame.json  frame.tex
doc/communication/syndesicp/: syndesicp.wsd
doc/software/: Doxyfile  syndesicp.drawio
examples/ArduinoTest/: ArduinoTest.ino
examples/comtest/: CMakeLists.txt  Makefile  syndesicp_communication.sln
examples/comtest/device/: device.cpp
examples/comtest/host/: host.cpp
examples/comtest/user_config/: callbacks_config.hpp  protocols_config.hpp
hardware/Syndesi_pcb/: Syndesi_pcb.kicad_pro
software/C++/: Notes.md
software/C++/syndesicp/: .gitignore  CMakeLists.txt  Makefile  Notes.md  install_manifest.txt  make_arduino_library.sh
software/C++/syndesicp/include/: __payloadmanager.hpp  buffer.hpp  callbacks.hpp  core.hpp  frame.hpp  framemanager.hpp  interfaces.hpp  ipcontroller.hpp  network.hpp  networkinterface.hpp  payloads.hpp  rs485controller.hpp  sdid.hpp  syndesi_tools.hpp  syndesi_types.hpp  syndesicp.hpp  uartcontroller.hpp
software/C++/syndesicp/src/: Makefile  __payloadmanager.cpp  buffer.cpp  callbacks.cpp  core.cpp  frame.cpp  framemanager.cpp  framemanagercallbacks.cpp  ipcontroller.cpp  network.cpp  networkinterface.cpp  payloads.cpp  rs485controller.cpp  sdid.cpp  syndesi_tools.cpp  syndesi_types.cpp  uartcontroller.cpp
software/C++/syndesicp/user_config/: callbacks_config.hpp  callbacks_configuration.hpp  general_config.hpp  protocols_config.hpp
software/Python/syndesi/syndesi/: __init__.py  devices.py  frame.py  payloads.py  settings.py
software/Scripts/: callbacks_configuration_template.hpp.txt  callbacks_template.cpp.txt  callbacks_template.hpp.txt  commands.yaml  cpp.py  framemanagercallbacks_template.cpp.txt  generate_commands.py  payload_class_template.cpp.txt  payloads_template.cpp.txt  payloads_template.hpp.txt  payloads_template.py  settings.py
software/device/: Notes.md
software/device/syndesi/include/: commands.hpp  syndesi.hpp  syndesi_types.hpp
software/device/syndesi/src/: syndesi.cpp
software/device/syndesi/tools/commands/: commands.py  commands.yaml  generate_commands.py
software/host/Syndesi/: setup.py
software/host/Syndesi/syndesi/: device.py
